fix(datagrid): Header menu icon not rendering on firefox

--- a/packages/datagrid/src/components/HeaderCellRenderer/HeaderCellRenderer.scss
+++ b/packages/datagrid/src/components/HeaderCellRenderer/HeaderCellRenderer.scss
@@ -51,10 +51,6 @@
 		height: tokens.$coral-sizing-minimal;
 	}
 
-	&__menu-button svg {
-		transform: rotate(90deg);
-	}
-
 	&--loading {
 		animation: tokens.$coral-animation-heartbeat;
 	}
